--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Full stack developer test",
   "main": "app.js",
   "scripts": {
-    "test": "mocha tests/*.specs.js --exit"
+	"test": "mocha tests/*.specs.js --exit",
+	"start": "node app.js"
   },
   "dependencies": {
     "cors": "~2.8.5",
